fix: fixed image alignment issue & responsive bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -114,7 +114,6 @@ body {
   border-radius: 50%;
   z-index: 1;
   margin-top: -1rem;
-  margin-left: 2rem;
 }
 .github-name,
 .github-bio,
